data/derived/fa15/progs/unify/prog4013.ml.out
Characters 77-110:
  | h::t -> matchHeads (getTail(listReverse(explode w)));;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type char list
       but an expression was expected of type 'a list list
       Type char is not compatible with type 'a list 
